// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled Breakpoints work in variants 1`] = `
{
  "orderedAppliedStyles": [
    "._initial_c_vfarC {color: red;}",
    "._breakpointOne_h_KwWJf {height: 10px;}",
    "._breakpointTwo_h_hiyRrM {height: 20px;}"
  ],
  "props": {
    "className": "_initial_c_vfarC _breakpointOne_h_KwWJf _breakpointTwo_h_hiyRrM scid-kvQUME"
  },
  "children": [
    "no variant"
  ]
}
`;

exports[`styled Breakpoints work in variants and when a responsive variant is passed ot the element 1`] = `
{
  "orderedAppliedStyles": [
    "._initial_c_vfarC {color: red;}",
    "._breakpointOne_h_dDcWdv {height: 100px;}",
    "._breakpointTwo_h_dPiPAc {height: 200px;}"
  ],
  "props": {
    "className": "_breakpointOne_h_dDcWdv _breakpointTwo_h_dPiPAc _initial_c_vfarC scid-cXpAaU"
  },
  "children": [
    "with responsive variant"
  ]
}
`;

exports[`styled Breakpoints work in variants and when the variant is passed to the jsx element 1`] = `
{
  "orderedAppliedStyles": [
    "._initial_c_vfarC {color: red;}",
    "._breakpointOne_h_kgNeVv {height: 1000px;}",
    "._breakpointTwo_h_fptqfg {height: 2000px;}"
  ],
  "props": {
    "className": "_breakpointOne_h_kgNeVv _breakpointTwo_h_fptqfg _initial_c_vfarC scid-cXpAaU"
  },
  "children": [
    "with variant"
  ]
}
`;

exports[`styled Handles compound variant 1`] = `
{
  "orderedAppliedStyles": [
    "._gwFOTp {background-color: red;}",
    "._cDgDLB {height: 60px;}"
  ],
  "props": {
    "className": "_cDgDLB _gwFOTp scid-URbJg"
  },
  "children": [
    "not compound"
  ]
}
`;

exports[`styled Handles compound variant 2`] = `
{
  "orderedAppliedStyles": [
    "._izHeYc {height: 30px;}",
    "._eBRzFG {background-color: compoundColor;}"
  ],
  "props": {
    "className": "_eBRzFG _izHeYc scid-URbJg"
  },
  "children": [
    "compound"
  ]
}
`;

exports[`styled Handles css prop 1`] = `
{
  "orderedAppliedStyles": [
    "._fNPZtH {background-color: gray;}",
    "._vfarC {color: red;}"
  ],
  "props": {
    "className": "_vfarC _fNPZtH scid-dmZJpl"
  },
  "children": [
    "hello world"
  ]
}
`;

exports[`styled Handles css prop 2`] = `
{
  "orderedAppliedStyles": [
    "._fNPZtH {background-color: gray;}",
    "._vfarC {color: red;}"
  ],
  "props": {
    "className": "_vfarC _fNPZtH scid-dmZJpl"
  },
  "children": [
    "hello world"
  ]
}
`;

exports[`styled It handles variants with a numeric value of 0 1`] = `
{
  "orderedAppliedStyles": [
    "._NkcBC {height: 1px;}"
  ],
  "props": {
    "className": "_NkcBC scid-fUwIQk"
  },
  "children": [
    "height should equal '1px'"
  ]
}
`;

exports[`styled Renders basic component 1`] = `
{
  "orderedAppliedStyles": [
    "._dawVaV div {font-size: 18px;}"
  ],
  "props": {
    "className": "hi _dawVaV scid-dIyoRL"
  },
  "children": [
    "hello world"
  ]
}
`;

exports[`styled renders component with variant 1`] = `
{
  "orderedAppliedStyles": [
    "._fNPZtH {background-color: gray;}"
  ],
  "props": {
    "className": "_fNPZtH scid-gFxMiu"
  },
  "children": [
    "hello world"
  ]
}
`;

exports[`styled renders component with variant 2`] = `
{
  "orderedAppliedStyles": [
    "._gwFOTp {background-color: red;}"
  ],
  "props": {
    "className": "_gwFOTp scid-gFxMiu"
  },
  "children": [
    "hello world"
  ]
}
`;

exports[`styled renders component with variant 3`] = `
{
  "orderedAppliedStyles": [
    "._htDnsg {background-color: blue;}"
  ],
  "props": {
    "className": "_htDnsg scid-gFxMiu"
  },
  "children": [
    "hello world"
  ]
}
`;
